--- a/sls-albums/s-project.json
+++ b/sls-albums/s-project.json
@@ -1,5 +1,12 @@
 {
   "name": "sls-albums",
-  "custom": {},
-  "plugins": []
+  "custom": {
+  "cors": {
+      "allowOrigin": "*",
+      "allowHeaders": ["Content-Type", "X-Amz-Date", "Authorization", "X-Api-Key"]
+    }
+  },
+  "plugins": [
+    "serverless-cors-plugin"
+  ]
 }
