--- a/sls-albums/image/package.json
+++ b/sls-albums/image/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "asyncawait": "^1.0.3",
-    "gm": "^1.22.0"
+    "gm": "^1.22.0",
+    "mime": "^1.3.4"
   }
 }
