added client site deployment via severless-client-s3 plugin, changed bucket names

--- a/sls-albums/package.json
+++ b/sls-albums/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "asyncawait": "^1.0.3",
     "gm": "^1.22.0",
+    "serverless-client-s3": "^2.0.0",
     "serverless-cors-plugin": "^0.4.1"
   }
 }
