--- a/sls-albums/package.json
+++ b/sls-albums/package.json
@@ -14,10 +14,11 @@
   },
   "dependencies": {
     "asyncawait": "^1.0.3",
+    "aws-sdk": "^2.3.17",
     "gm": "^1.22.0",
+    "mime": "^1.3.4",
     "serverless-client-s3": "^2.0.0",
     "serverless-cors-plugin": "^0.4.1"
   },
-  "devDependencies": {
-  }
+  "devDependencies": {}
 }
