--- a/upload/package.json
+++ b/upload/package.json
@@ -1,16 +1,14 @@
 {
-  "name": "image",
+  "name": "upload",
   "version": "1.0.0",
   "description": "",
-  "main": "handler.js",
+  "main": "upload.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "asyncawait": "^1.0.3",
-    "gm": "^1.22.0",
-    "mime": "^1.3.4"
+    "axios": "^0.12.0"
   }
 }
