--- a/sls-albums/package.json
+++ b/sls-albums/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "asyncawait": "^1.0.3",
     "aws-sdk": "^2.3.17",
+    "axios": "^0.12.0",
     "gm": "^1.22.0",
     "mime": "^1.3.4",
     "serverless-client-s3": "^2.0.0",
