--- a/sls-albums/package.json
+++ b/sls-albums/package.json
@@ -16,8 +16,10 @@
     "asyncawait": "^1.0.3",
     "aws-sdk": "^2.3.17",
     "axios": "^0.12.0",
+    "bluebird": "^3.4.0",
     "gm": "^1.22.0",
     "mime": "^1.3.4",
+    "request": "^2.72.0",
     "serverless-client-s3": "^2.0.0",
     "serverless-cors-plugin": "^0.4.1"
   },
