added handlebars templating and naming changes

--- a/sls-albums/s-project.json
+++ b/sls-albums/s-project.json
@@ -6,7 +6,7 @@
       "allowHeaders": ["Content-Type", "X-Amz-Date", "Authorization", "X-Api-Key"]
     },
     "client": {
-      "bucketName": "demo-codestock-serverless-site"
+      "bucketName": "lambda-albums.xyz"
     }
   },
   "plugins": [
