--- a/sls-albums/package.json
+++ b/sls-albums/package.json
@@ -10,7 +10,7 @@
     "url": "git://github.com/"
   },
   "scripts": {
-    "deploy-client": "cp -r client/src/* client/dist && sls client deploy"
+    "deploy-client": "mkdir -p client/dist && cp -r client/src/* client/dist && sls client deploy"
   },
   "dependencies": {
     "asyncawait": "^1.0.3",
@@ -18,6 +18,7 @@
     "axios": "^0.12.0",
     "bluebird": "^3.4.0",
     "gm": "^1.22.0",
+    "handlebars": "^4.0.5",
     "mime": "^1.3.4",
     "request": "^2.72.0",
     "serverless-client-s3": "^2.0.0",
